[package]
name = "d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"

reqwest = { version = "0.10", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }

dotenv = "0.15.0"
